Downloads/test/mjpg-streamer/

--- a/Downloads/test/mjpg-streamer/mjpg-streamer-experimental/CMakeLists.txt
+++ b/Downloads/test/mjpg-streamer/mjpg-streamer-experimental/CMakeLists.txt
@@ -71,13 +71,17 @@ set (CMAKE_INSTALL_RPATH ${MJPG_STREAMER_PLUGIN_INSTALL_PATH})
 set (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 
-add_executable(mjpg_streamer mjpg_streamer.c
-                             utils.c)
+add_executable(mjpg_streamer mjpg_streamer.cpp
+                             utils.cpp)
 
 # 632.7.0807 hiroshi: include raspicam lib
 #find_package(raspicam)
 #include_directories(${raspicam_INCLUDE_DIRS})
 #set(LIBS &{LIBS} ${raspicam_LIBRARIES})
+
+# 638.4.0915 hiroshi: include opencv lib
+target_link_libraries(mjpg_streamer ${OpenCV_LIBS})
+
 #target_link_libraries(mjpg_streamer pthread dl raspicam)
 target_link_libraries(mjpg_streamer pthread dl)
 install(TARGETS mjpg_streamer DESTINATION bin)
